--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <body>
  <div class="container">
   <h1>Will you be my Valentine?</h1>
-  <img id="normal" src="/Cute/gif.img/normal.gif" alt=""><br>
-  <img id="happy" src="/Cute/gif.img/happy.gif" alt="">
-  <img id="crying" src="/Cute/gif.img/crying.gif" alt="">
+  <img id="normal" src="/gif.img/normal.gif" alt=""><br>
+  <img id="happy" src="/gif.img/happy.gif" alt="">
+  <img id="crying" src="/gif.img/crying.gif" alt="">
   <button id="yes">Yes</button>
   <button id="no">No</button>
  </div>
