--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 <body>
  <div class="container">
   <h1>Will you be my Valentine?</h1>
-  <img id="normal" src="/Cute/gif.img/normal.gif" alt=""><br>
-  <img id="happy" src="/Cute/gif.img/happy.gif" alt="">
-  <img id="crying" src="/Cute/gif.img/crying.gif" alt="">
+  <img id="normal" src="normal.gif" alt=""><br>
+  <img id="happy" src="happy.gif" alt="">
+  <img id="crying" src="crying.gif" alt="">
   <button id="yes">Yes</button>
   <button id="no">No</button>
  </div>
