--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         no.style.opacity = '0'
         height = 100
         body.style.backgroundColor = '#68B31B'
+        yes.style.paddingBottom = '400px'
        break ;
        
     }
