Remove emojis from text content in index.html

--- a/index.html
+++ b/index.html
@@ -97,26 +97,26 @@
    
     switch (height){
      case 10:
-      no.textContent ='are you sure?🤨';
+      no.textContent ='are you sure?';
       break;
       case 20:
-       no.textContent ='are you really??😟';
+       no.textContent ='are you really??';
        break;
        case 20:
-        no.textContent ='no, please.!!🥲.';
+        no.textContent ='no, please.!!.';
        break;
        case 40:
-        no.textContent ='jus once, please...🙏🙏';
+        no.textContent ='just once. Please...';
        break;
        case 50:
-        no.textContent ='I will be very sad...😖';
+        no.textContent ='I will be very sad...';
        break;
        case 60:
-        no.textContent ="i'm gonna cry🥹";
+        no.textContent ="i'm gonna cry";
        
        break;
        case 70:
-        no.textContent ='like fr!??!?😨';
+        no.textContent ='like fr!??!?';
         crying.style.opacity = '0'
         h1.style.opacity = '0'
         no.style.opacity = '0'
