--- a/index.html
+++ b/index.html
@@ -45,11 +45,17 @@
    font-size: 20px;
   
   }
-  #crying,
   #happy{
    display: none;
    margin: auto;
    height: 80px;
+   width: auto;
+   margin-bottom: 20px;
+  }
+  #crying{
+   display: none;
+   margin: auto;
+   height: 130px;
    width: auto;
    margin-bottom: 20px;
   }
