--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   const happy =document.getElementById('happy')
   const normal =document.getElementById('normal')
   const body =document.querySelector('body')
-  let height = 0;
+  let height = 10;
   let width = 10;
   let fonts = 1;
   let attempt = 0;
@@ -103,10 +103,10 @@
    
     switch (height){
      case 10:
-      no.textContent ='are you sure?';
+      no.textContent ='nooo';
       break;
       case 20:
-       no.textContent ='are you really??';
+       no.textContent ='are you sure??';
        break;
        case 30:
         no.textContent ='no, please.!!.';
